Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -603,8 +603,7 @@ q cite {
   font-size: var(--smallest);
 }
 
-small
-  { font-size: var(--smaller) }
+small { font-size: var(--smaller) }
 
 sub, sup { /* Prevent `sub` and `sup` elements from affecting the line height in all browsers. */
 vertical-align: unset;
